# django-react

backend/: .gitignore  Makefile  pyproject.toml
backend/server/: db.sqlite3
backend/server/server/: settings.py  urls.py
