[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Alhuin <jjanin-r@student.42lyon.fr>"]

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.13.1"
Django = "^4.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^21.12b0"
flake8 = "^4.0.1"
coverage = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
